force-app/main/default/objects/Portfolio_Blog_Post__c/Portfolio_Blog_Post__c.object-meta.xml
<CustomObject>
    <label>Portfolio Blog Post</label>
    <nameField>
        <label>Portfolio Blog Post Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolio Blog Posts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>