force-app/main/default/objects/Portfolio_Blog_Post__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Digital Experience</fullName>
            </value>
            <value>
                <fullName>Architecture</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>