force-app/main/default/objects/Portfolio_Blog_Post__c/fields/Slug__c.field-meta.xml
<CustomField>
    <fullName>Slug__c</fullName>
    <label>Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>